<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DetailFoodActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="90dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/pic_img"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:minHeight="400dp"
                    android:contentDescription="@string/description_image"
                    android:scaleType="centerCrop"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btn_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/description_image"
                    app:layout_constraintBottom_toBottomOf="@+id/pic_img"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pic_img"
                    app:srcCompat="@drawable/favorite_white" />

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/description_image"
                    android:padding="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/arrow"
                    app:tint="@color/color_back_ground" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/text_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/title"
                    android:textColor="@color/blue_grey"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:hint="Title"
                    android:autofillHints="Title"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/text_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="$0"
                    android:hint="Price"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:autofillHints="Price"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:progressTint="#FFC106"
                    android:stepSize="0.1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/text_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5 Rating"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/ratingBar"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar"
                    tools:ignore="TouchTargetSizeCheck"
                    android:hint="Rating"
                    android:autofillHints="Rating"
                    android:inputType="numberDecimal" />

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_image"
                    android:src="@drawable/time"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/red" />

                <EditText
                    android:id="@+id/text_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="15 min"
                    android:hint="Time"
                    app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                    app:layout_constraintEnd_toStartOf="@+id/imageView14"
                    app:layout_constraintTop_toTopOf="@+id/ratingBar"
                    tools:ignore="TouchTargetSizeCheck"
                    android:autofillHints="Time"
                    android:inputType="number" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/grey_background"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingEnd="4dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="Category:"
                    android:textColor="@color/blue_grey"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_danhmuc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/details"
                android:textColor="@color/blue_grey"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/details"
                android:textColor="@color/blue_grey"
                android:hint="Details"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck"
                android:autofillHints="Details"
                android:inputType="textMultiLine" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"

                android:layout_marginEnd="16dp">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Quantity"
                    android:textColor="@color/blue_grey"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/minus_btn"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/edit_text_background"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textView19"
                    app:layout_constraintStart_toEndOf="@+id/textView19"
                    app:layout_constraintTop_toTopOf="@+id/textView19" />

                <TextView
                    android:id="@+id/text_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:text="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/minus_btn"
                    app:layout_constraintStart_toEndOf="@+id/minus_btn"
                    app:layout_constraintTop_toTopOf="@+id/minus_btn" />

                <TextView
                    android:id="@+id/plus_btn"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/edit_text_background"
                    android:gravity="center"
                    android:text="+"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/minus_btn"
                    app:layout_constraintStart_toEndOf="@+id/text_number"
                    app:layout_constraintTop_toTopOf="@+id/minus_btn" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:minHeight="50dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:weightSum="2"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="Best Food"
                    android:textColor="@color/color_back_ground"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            style="@android:style/Widget.Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:background="@drawable/grey_button_background"
            android:drawableStart="@drawable/cart"
            android:paddingStart="16dp"
            android:text="Delete"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_save"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            style="@android:style/Widget.Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:background="@drawable/red_button_background"
            android:drawableStart="@drawable/cart"
            android:paddingStart="16dp"
            android:text="Save"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>